--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ CustomerApp/Benoit.YBS.App/Benoit.YBS.App.MobileAppService/bin/
 CustomerApp/Benoit.YBS.App/Benoit.YBS.App.MobileAppService/obj/
 CustomerApp/Benoit.YBS.App/Benoit.YBS.App/obj/
 CustomerApp/Benoit.YBS.UiReference/obj/
+CustomerApp/Benoit.YBS.App/Benoit.YBS.App.iOS/obj/
+CustomerApp/Benoit.YBS.UiReference/bin/Debug/
+CustomerApp/.vs/
