Updated gitignore to remove bin folder

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ CustomerApp/Benoit.YBS.UiReference/obj/
 CustomerApp/Benoit.YBS.App/Benoit.YBS.App.iOS/obj/
 CustomerApp/Benoit.YBS.UiReference/bin/Debug/
 CustomerApp/.vs/
+CustomerApp/Benoit.YBS.App/Benoit.YBS.App/bin/
